# foc

./: .gitignore  README.md  common.py  google_cali.py  mks_apply_runtime_baseline.py  mks_axis_characterize.py  mks_direct_profile_diagnostic_sweep.py  mks_force_legacy_flash.py  mks_live_encoder_source_probe.py  mks_manual_passthrough_test.py  mks_mounted_absolute_target_probe.py  mks_mounted_api.py  mks_mounted_directional_move.py  mks_mounted_directional_validation.py  mks_mounted_hysteresis_probe.py  mks_mounted_preload_probe.py  mks_mounted_preload_rules.py  mks_mounted_slew_compare.py  mks_open_loop_run_in.py  mks_probe_legacy_dfu_write.py  mks_repeatability_sweep.py  mks_small_step_probe.py  output_sensor_bridge.py  output_sensor_protocol.py  output_sensor_zero_calibrate.py  overnight_autotune_runner.py  rp2040_outer_loop_test.py  run_liveplotter.sh  run_odrivetool.sh  run_overnight_autotune.sh  self_calibrate.py  test_motor_setup.py
docs/: NEW_MAC_SETUP.md  bldc_motor_side_project.md  embedded_joint_architecture_scorecard.md  function_reference.md  odrive_command_cheatsheet.md  output_sensor_architecture.md  rag_tuning_assistant.md
legacy/: README.md  tests1.py
logs/: learning_ledger_latest.json  stable_diagnostic_profiles_latest.json
rp2040/output_encoder_bridge/: CMakeLists.txt  README.md
rp2040/output_encoder_bridge/src/: bridge_protocol.c  bridge_protocol.h  main.c  mt6835.c  mt6835.h  odrive_uart.c  odrive_uart.h  outer_loop.c  outer_loop.h
ui/: README.md
ui/OperatorConsole/: Package.swift
ui/backend/: odrive_operator_backend.py
(+10 files in other folders)
